# DataEngineering

./: .gitattributes  .gitignore  README.md
DataCentralisationProject/: .flake8  .gitignore  Readme.md  analytics.py  data_cleaning.py  data_extractor.py  database_utils.py  pyproject.toml  schema_update.py  workflow.py
DataCentralisationProject/_docs/: design_dataflow.drawio
DataCentralisationProject/queries/: T1_top_3_countries.sql  T2_locations_most_stores.sql  T3_months_largest_sales.sql  T4_online_sales.sql  T5_store_type_sales.sql  T6_month_year_highest.sql  T7_headcount_country.sql  T8_sales_DE_store_type.sql  T9_sales_time.sql
DataCentralisationProject/tests/: test_data_cleaning.py  test_data_extractor.py  test_database_utils.py  test_user_data.csv
PinterestPipeline/: .gitattributes  .gitignore  0a1d8948160f_PinterestDataPipeline.ipynb  0a1d8948160f_PinterestDataPipeline_BatchProcessing.ipynb  0a1d8948160f_PinterestDataPipeline_Modularized.ipynb  0a1d8948160f_PinterestDataPipeline_StreamProcessing.ipynb  0a1d8948160f_Streaming_PinterestDataPipeline.ipynb  0a1d8948160f_dag.py  MySQLDataExplore.ipynb  PySparkExplore.ipynb  Readme.adoc  Readme.md  aws_connector.ipynb  pinterest_data_cleaning.ipynb  pyproject.toml  requirements.txt  user_posting_emulation.py  user_posting_emulation_streaming.py
PinterestPipeline/__deprecated/: 0a1d8948160f_PinterestDataPipeline.ipynb
PinterestPipeline/_docs/: AnalyticsDashboard-0a1d8948160f_PinterestData.html  pinterest_pipeline.drawio
PinterestPipeline/airflow/: 0a1d8948160f_dag.py
PinterestPipeline/utils/: database.py  (+2 more)
(+24 files in other folders)
